tests/errors/syntax.unterminated curly string.art
print {
    done
}
this {
something else